# Generic-Genetic-Algorithm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
header/: GeneticAlgorithm.hpp  GraphicalUserInterface.hpp  genetic_algorithm.hpp  graphical_user_interface.hpp
source/: genetic_algorithm.cpp  graphical_user_interface.cpp  main.cpp
src/: GeneticAlgorithm.cpp  GraphicalUserInterface.cpp  main.cpp
